...
        try insertPayee(db, id: pgeId, name: "PG&E")
        try insertPayee(db, id: comcastId, name: "Comcast")
        try insertPayee(db, id: shellId, name: "Shell")
        try insertPayee(db, id: bartId, name: "BART")
        try insertPayee(db, id: chipotleId, name: "Chipotle")
        try insertPayee(db, id: blueBottleId, name: "Blue Bottle Coffee")
        try insertPayee(db, id: netflixId, name: "Netflix")
        try insertPayee(db, id: amazonId, name: "Amazon")
        try insertPayee(db, id: fitnessId, name: "24 Hour Fitness")
        try insertPayee(db, id: cvsId, name: "CVS Pharmacy")
        try insertPayee(db, id: paycheckId, name: "Paycheck")
        try insertPayee(db, id: startingBalanceId, name: "Starting Balance")
        try insertPayee(db, id: vanguardPayeeId, name: "Vanguard")
...
